Bug 1130785 - Fix JS_HAS_EXPR_CLOSURES macro conditions. r=shu